<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#AA00FF"
            android:elevation="4dp"
            android:textAlignment="center"
            android:textDirection="firstStrongRtl"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="#4527A0" />


        <TextView
            android:id="@+id/tv_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:fontFamily="serif-monospace"
            android:text="@string/all_products"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />



        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="381dp"
            android:layout_height="64dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_products">

            <RadioButton
                android:id="@+id/rb_all"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:fontFamily="serif-monospace"
                android:text="@string/all"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rbhdst"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/headset"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_notebook"
                android:layout_width="94dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/notebook"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rbcnsl"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/console"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbmntr"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/monitor"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rbdsktop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/desktop"
                android:textColor="@color/purple"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:spanCount="2"
            tools:listitem="@layout/item_product" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rv_all_products"
            app:layout_constraintEnd_toEndOf="@+id/rv_all_products"
            app:layout_constraintStart_toStartOf="@+id/rv_all_products"
            app:layout_constraintTop_toTopOf="@+id/rv_all_products" />

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:srcCompat="@drawable/baseline_error_24" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="#C62828"
            android:textSize="24sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_error" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>